tests/ui/rfcs/rfc-2632-const-trait-impl/super-traits-fail-3.yy.stderr
error[E0277]: the trait bound `Param<host>: TyCompat<Foo::{synthetic#0}>` is not satisfied
  --> $DIR/super-traits-fail-3.rs:21:7
   |
LL |     x.a();
   |       ^ the trait `TyCompat<Foo::{synthetic#0}>` is not implemented for `Param<host>`
   |
note: required by a bound in `Foo::a`
  --> $DIR/super-traits-fail-3.rs:7:25
   |
LL | #[cfg_attr(any(yy, yn), const_trait)]
   |                         ^^^^^^^^^^^ required by this bound in `Foo::a`
LL | trait Foo {
LL |     fn a(&self);
   |        - required by a bound in this associated function
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | const fn foo<T: ~const Bar>(x: &T) where Param<host>: TyCompat<Foo::{synthetic#0}> {
   |                                    +++++++++++++++++++++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
